# ethsnarks

src/: CMakeLists.txt
src/gadgets/: CMakeLists.txt
